--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         .image-thumbnail {
             width: 100px;
@@ -22,60 +21,63 @@
     <title>Product</title>
 </head>
 <body>
-    <div class="container-fluid ">
-                <table class="table table-striped">
-                    <thead>
-                        <tr class="table table-dark">
-                            <th>ID</th>
-                            <th>TITLE</th>
-                            <th>PRICE</th>
-                            <th>DESCRIPTION</th>
-                            <th>CATEGORY</th>
-                            <th>IMAGE</th>
-                        </tr>
-                        </thead>
-                        <tbody id="tbl">
-                        </tbody>
-                        </table>
-                        </div>
+    <div class="container mx-auto p-4">
+        <table class="min-w-full bg-white border border-gray-200">
+            <thead>
+                <tr class="bg-gray-800 text-white">
+                    <th class="py-2 px-4 border-b">ID</th>
+                    <th class="py-2 px-4 border-b">TITLE</th>
+                    <th class="py-2 px-4 border-b">PRICE</th>
+                    <th class="py-2 px-4 border-b">DESCRIPTION</th>
+                    <th class="py-2 px-4 border-b">CATEGORY</th>
+                    <th class="py-2 px-4 border-b">IMAGE</th>
+                </tr>
+            </thead>
+            <tbody id="tbl">
+            </tbody>
+        </table>
+    </div>
 </body>
 <script src="products.json"></script>
 <script>
-    var tbl=document.getElementById("tbl");
-    data.forEach((e)=>{
-        var tr=document.createElement("tr")
-        var td=document.createElement("td")
-        td.innerText=e.id;
-        tr.appendChild(td)
+    var tbl = document.getElementById("tbl");
+    data.forEach((e) => {
+        var tr = document.createElement("tr");
+        
+        var td = document.createElement("td");
+        td.innerText = e.id;
+        td.className = "py-2 px-4 border-b";
+        tr.appendChild(td);
 
-        td=document.createElement("td")
-        td.innerText=e.title;
-        tr.appendChild(td)
+        td = document.createElement("td");
+        td.innerText = e.title;
+        td.className = "py-2 px-4 border-b";
+        tr.appendChild(td);
 
-        td=document.createElement("td")
-        td.innerText=e.price;
-        tr.appendChild(td)
+        td = document.createElement("td");
+        td.innerText = e.price;
+        td.className = "py-2 px-4 border-b";
+        tr.appendChild(td);
 
-        td=document.createElement("td")
-        td.innerText=e.description;
-        tr.appendChild(td)
+        td = document.createElement("td");
+        td.innerText = e.description;
+        td.className = "py-2 px-4 border-b";
+        tr.appendChild(td);
 
-        td=document.createElement("td")
-        td.innerText=e.category;
-        tr.appendChild(td)
+        td = document.createElement("td");
+        td.innerText = e.category;
+        td.className = "py-2 px-4 border-b";
+        tr.appendChild(td);
 
         td = document.createElement("td");
         var img = document.createElement("img");
         img.src = e.image; 
         img.alt = e.title; 
-        img.width = 100; 
-        img.height = 100;
         img.className = "image-thumbnail";
         td.appendChild(img);
         tr.appendChild(td);
 
-        tbl.appendChild(tr)
-    })
-    
+        tbl.appendChild(tr);
+    });
 </script>
 </html>
